Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <h2>Usage</h2>
 
-<p>You need esparse-cl2 installed before converting files.</p>
+<p>You need <a href="https://github.com/chlorinejs/esparse-cl2">esparse-cl2</a> installed before converting files.</p>
 
 <pre><code>sudo npm install -g esparse-cl2
 </code></pre>
